Quorum/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignNumObjBoolObjField.quorum
class Main
    Boolean v
    action Main
        v:SetValue(true)
        Test(v)
    end

    action Test(Number var)
    end
end
